...
                    }
                }
                ToolbarItem {
                    Button {
                        isPresentingNewTrackerSheet = true
                    } label: {
                        Label("Add Tracker", systemImage: "plus")
                    }
                }
            }
            .sheet(isPresented: $isPresentingNewTrackerSheet) {
                TrackerEditSheet(tracker: nil)
            }
...
